# rps-game

./: CMakeLists.txt  main.cpp  previous_versions_of_code.hpp  shape.hpp  tlist.hpp
